; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/emxx_udc/extr_emxx_udc.c_nbu2ss_drv_resume.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/emxx_udc/extr_emxx_udc.c_nbu2ss_drv_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.nbu2ss_udc = type { i32, i64, i32 }

@vbus_gpio = common dso_local global i32 0, align 4
@USB_STATE_POWERED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @nbu2ss_drv_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nbu2ss_drv_resume(%struct.platform_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.platform_device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.nbu2ss_udc*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %3, align 8
  %6 = load %struct.platform_device*, %struct.platform_device** %3, align 8
  %7 = call %struct.nbu2ss_udc* @platform_get_drvdata(%struct.platform_device* %6)
  store %struct.nbu2ss_udc* %7, %struct.nbu2ss_udc** %5, align 8
  %8 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %5, align 8
  %9 = icmp ne %struct.nbu2ss_udc* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

11:                                               ; preds = %1
  %12 = load i32, i32* @vbus_gpio, align 4
  %13 = call i64 @gpiod_get_value(i32 %12)
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %26

16:                                               ; preds = %11
  %17 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %5, align 8
  %18 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %17, i32 0, i32 0
  store i32 1, i32* %18, align 8
  %19 = load i32, i32* @USB_STATE_POWERED, align 4
  %20 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %5, align 8
  %21 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %20, i32 0, i32 2
  store i32 %19, i32* %21, align 8
  %22 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %5, align 8
  %23 = call i32 @_nbu2ss_enable_controller(%struct.nbu2ss_udc* %22)
  %24 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %5, align 8
  %25 = call i32 @_nbu2ss_pullup(%struct.nbu2ss_udc* %24, i32 1)
  br label %26

26:                                               ; preds = %16, %11
  %27 = load %struct.nbu2ss_udc*, %struct.nbu2ss_udc** %5, align 8
  %28 = getelementptr inbounds %struct.nbu2ss_udc, %struct.nbu2ss_udc* %27, i32 0, i32 1
  store i64 0, i64* %28, align 8
  store i32 0, i32* %2, align 4
  br label %29

29:                                               ; preds = %26, %10
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local %struct.nbu2ss_udc* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i64 @gpiod_get_value(i32) #1

declare dso_local i32 @_nbu2ss_enable_controller(%struct.nbu2ss_udc*) #1

declare dso_local i32 @_nbu2ss_pullup(%struct.nbu2ss_udc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
